--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/cli": "^4.1.11",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
