--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
   "printWidth": 100,
   "bracketSpacing": true,
-  "arrowParens": "always"
-}
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-tailwindcss"]}
+
+
