--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "plugins": ["prettier-plugin-tailwindcss"]}
-
-
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "endOfLine": "lf"
+}
