--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.4",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/cli": "^4.1.11",
+    "lucide-react": "^0.536.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
