--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/cli": "^4.1.11",
+    "lucide-react": "^0.543.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
