--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/cli": "^4.1.11",
     "lucide-react": "^0.543.0",
