--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "commitlint.config.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["commitlint.config.ts", ".next", "node_modules"],
+
 }
